# SmartCalc_v1

./: README.md
src/: Makefile  dvi.md
src/SmartCalc_v1.app/Contents/: Info.plist
src/SmartCalc_v1.app/Contents/Resources/: calc.icns
src/files/: CMakeLists.txt  Resurces.qrc  credit.c  deposit.c  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_SmartCalc.c  my_SmartCalc.h  my_test.c  qcustomplot.cpp  s21_SmartCalc.c  s21_SmartCalc.h  s21_test.c
src/files/img/: checked  checked50  down_arrow  radio_off  radio_on  unchecked
